# aockit

./: README.md  pyproject.toml
.github/workflows/: pylint.yml  python-publish.yml
aockit/: grid.py  inputs.py
aockit/test/: test_grid.py  test_inputs.py
aockit/test/assets/: input_char_grid.txt  input_int_grid.txt  input_int_groups.txt  input_string_groups.txt  input_strings.txt
